all passed test

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+	<img src="image1.jpg">
+	<img src="image2.jpg" alt="Beautiful sunset at the beach">
+	<img src="image3.jpg" alt="Mountain landscape" title="Mountain view from the top">
+    
   </body>
 </html>
